<resources>
    <string name="app_name">Spplitt</string>
    <string name="server_api_key"> AIzaSyC90VvPZgv65FF9D65Oi5GroMaIrUj3FQs</string>
    <string name="gcm_project_no">826247417666</string>
    <string name="gcm_project_id">spplitt-1301</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_all_adds">All ads</string>
    <string name="hint_email">Email address/Mobile number</string>
    <string name="hint_password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="view_adds">View Adds</string>
    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="gender">Gender</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="track_ur_location"><u>Track your location</u></string>
    <string name="already_have_acnt">Already have an Account?</string>
    <string name="login_here">Login Here</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_password_text">You will receive a reset password link. Please enter your email address used during registration below.</string>
    <string name="submit">Submit</string>
    <string name="change_password_text">Enter information below to reset your password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_old_password">Enter old password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_otp">Enter OTP code </string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Edit Profile</string>
    <string name="nav_change_password">Reset Password</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_post_ad">Post Ad</string>
    <string name="nav_view_ad">Categories</string>
    <string name="nav_manage_my_ad">My Ads</string>
    <string name="nav_set_preferences">Set Preferences</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="nav_about_split">About spplitt</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_logout">Logout</string>
    <string name="hint_age">Age</string>
    <string name="hint_email_edit">Email Address</string>
    <string name="change">Change</string>
    <string name="hint_password_edit">Change Password</string>
    <string name="country_prompt">Select gender</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="hint_ad_title">Ad title (max 50 characters)</string>
    <string name="hint_ad_desc">Enter Description (max 250 \n characters)</string>
    <string name="hint_no_of_people">Number of people to spplitt with</string>
    <string name="hint_date">Select date</string>
    <string name="hint_time">Select time</string>
    <string name="hint_location">Location</string>
    <string name="hint_splitt_cost">spplitt cost per person</string>
    <string name="hint_mobile_edit">Mobile No</string>
    <string name="update_email">Update Email Address</string>
    <string name="hint_email_update">Enter new email</string>
    <string name="hint_update_password">Enter your password</string>
    <string name="hint_mobile_update">Enter new mobile no</string>
    <string name="update_mobileno">Update Your Mobile No</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Please enter your Password</string>
    <string name="err_msg_mobileno">Please enter your mobile number</string>
    <string name="err_msg_mobileno_size">Enter valid mobile no</string>
    <string name="err_msg_username">Enter your username</string>
    <string name="err_msg_country">Please select your country</string>
    <string name="err_msg_city">Enter your city</string>
    <string name="err_msg_password_not_alphanumeric">Enter alphanumeric password</string>
    <string name="err_msg_new_password">Enter new password</string>
    <string name="err_msg_old_password">Enter old password</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet">Your mobile is not connected to the internet. Please connect to an active internet connection.</string>
    <string name="invalid_session">Invalid Session</string>
    <string name="logout_device">Your session has been expired, Please login again to continue.</string>
    <string name="please_wait">Please wait...</string>
    <string name="err_msg_otp">Enter your otp</string>
    <string name="err_msg_age">Please enter your age</string>
    <string name="err_msg_category">Enter Ad category</string>
    <string name="err_msg_adTitle">Enter Ad Title</string>
    <string name="err_msg_adDesc">Enter Ad Description</string>
    <string name="err_no_of_people_to_spplitt_with">Enter number of people to spplitt with</string>
    <string name="err_msg_adDate">Select ad date</string>
    <string name="err_msg_adCost">Please enter spplit cost amount</string>
    <string name="err_msg_adLocation">Enter Ad Location</string>
    <string name="err_msg_adTime">Select ad time</string>
    <string name="err_msg_email_mobileno">Enter your Email or Mobile No</string>
    <string name="err_valid_data">Enter valid data</string>
    <string name="err_img">Please enter profile image</string>
    <string name="err_invalid_image">Please select a valid image file.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="my_location">My Location</string>
    <string name="view_al_ads"><u>View all Ads</u></string>
    <string name="resend_otp">Resend Otp</string>
    <string name="unknown_error">Some unknown error occured.</string>
    <string name="unknown_error_message">Please try again. Unable to process your request</string>
    <string name="flag_ad">Flag this ad</string>
    <string name="connect">Connect</string>
    <string name="ad_details"><u>Ad Details</u></string>
    <string name="report_an_abuse">Report an abuse:</string>
    <string name="view_ad">View Ads</string>
    <string name="view_ad_details">Ad Details</string>
    <string name="nav_event_ad">View Event Ads</string>
    <string name="success_msg_flag">Your ad has been flagged.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="phone_nd_email">Phone and Email</string>
    <string name="rating_reviews">Rating and Reviews</string>
    <string name="ad_details_hint">Ad Details</string>
    <string name="ad_applied">No. of ads applied :</string>
    <string name="ad_posted">No. of ads posted :</string>
    <string name="but_done">Done</string>
    <string name="title_tab_start_date">From</string>
    <string name="ttile_tab_end_date">To</string>
    <string name="date_range">Date Range</string>
    <string name="from_date">Start</string>
    <string name="to_date">End</string>
    <string name="active_ads">Active</string>
    <string name="complete_ads">Connected</string>
    <string name="incomplete_ads">Expired</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="repost">Repost</string>
    <string name="no_ads_found">No ads found.</string>
    <string name="other_ads">Other Ads</string>
    <string name="other_details">Other Details</string>
    <string name="joined_on">Joined on:</string>
    <string name="other_gender">Gender:</string>
    <string name="applied_ads">applied</string>
    <string name="posted_ads">posted</string>
    <string name="response_awaited">Response Awaited</string>
    <string name="response_pending">Pending</string>
    <string name="load_more">Load More</string>
    <string name="accept">Accept</string>
    <string name="other_age">Age :</string>
    <string name="not_available">Not Available</string>
    <string name="closed_ads">Connected Ads</string>
    <string name="expired_ads">Connected</string>
    <string name="posted_by">Posted By:</string>
    <string name="delete_popup_msg">Are you sure you want to delete ad?</string>
    <string name="nav_requested_ad">Applied Ads</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
</resources>