<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_view_ad">
        <item
            android:id="@+id/nav_view_ad"
            android:icon="@mipmap/ic_view_ads"
            android:title="@string/nav_view_ad" />
    </group>
    <group android:id="@+id/menu_top_profile">
        <item
            android:id="@+id/nav_profile"
            android:checked="true"
            android:icon="@mipmap/ic_user_icn"
            android:title="@string/nav_profile" />
    </group>
    <group android:id="@+id/menu_top_change_password">
        <item
            android:id="@+id/nav_change_password"
            android:icon="@mipmap/ic_pswd_icn"

            android:title="@string/nav_change_password" />
    </group>
    <group android:id="@+id/menu_top_notifications">
        <item
            android:id="@+id/nav_notification"
            android:icon="@mipmap/ic_notification"
            android:title="@string/nav_notifications" />
    </group>
    <group android:id="@+id/menu_top_post_ad">
        <item
            android:id="@+id/nav_post_ad"
            android:icon="@mipmap/ic_post_ads"
            android:title="@string/nav_post_ad" />
    </group>
    <group android:id="@+id/menu_top_view_event_ad">
        <item
            android:id="@+id/nav_event_ad"
            android:icon="@mipmap/in_view_event"
            android:visible="false"
            android:title="@string/nav_event_ad" />
    </group>

    <group android:id="@+id/menu_manage_my_ad">
        <item
            android:id="@+id/nav_manage_my_ad"
            android:icon="@mipmap/ic_manage_ads"
            android:title="@string/nav_manage_my_ad" />
    </group>
    <group android:id="@+id/menu_requested_ad">
        <item
            android:id="@+id/nav_requested_ad"
            android:icon="@mipmap/ic_manage_ads"
            android:title="@string/nav_requested_ad" />
    </group>
    <group android:id="@+id/menu_set_preferences">
        <item
            android:id="@+id/nav_set_preferences"
            android:icon="@mipmap/ic_add_pref"
            android:title="@string/nav_set_preferences" />
    </group>
    <group android:id="@+id/menu_invite_friends">
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@mipmap/ic_invite_friends"
            android:title="@string/nav_invite_friends" />
    </group>

    <group android:id="@+id/menu_about_split">
        <item
            android:id="@+id/nav_about_split"
            android:icon="@mipmap/ic_about"
            android:title="@string/nav_about_split" />
    </group>
    <group android:id="@+id/menu_contact_us">
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@mipmap/ic_contact"
            android:title="@string/nav_contact_us" />
    </group>
    <group android:id="@+id/menu_privacy_policy">
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@mipmap/ic_add_pref"
            android:title="@string/nav_privacy_policy" />
    </group>
    <group android:id="@+id/menu_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout"
            android:title="@string/nav_logout" />
    </group>


</menu>
