<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/layout_header_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inner_margin_bw_views"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:tint="@color/yellow"
                android:src="@mipmap/ic_lock" />

            <com.igniva.spplitt.ui.views.TextViewRegular
                android:id="@+id/tv_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_margin_bw_views"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:text="@string/reset_password"
                android:textSize="@dimen/toolbar_textSize" />

            <com.igniva.spplitt.ui.views.TextViewNonRegular
                android:id="@+id/tv_reset_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:text="@string/reset_password_text"
                android:textSize="@dimen/tv_textSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:tint="@color/yellow"
                        android:src="@mipmap/ic_envelope" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@color/yellow" />

                    <com.igniva.spplitt.ui.views.EditTextNonRegular
                        android:id="@+id/et_forgot_email"
                        style="@style/EditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email_edit"
                        android:textColorHint="@color/yellow"
                        android:textColor="@color/colorBackground"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>

            <com.igniva.spplitt.ui.views.ButtonRegular
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_margin_bw_views"
                android:background="@color/yellow"
                android:onClick="onClick"
                android:text="@string/submit"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/btn_textSize"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>